# homework_week6_ngoctp

./: CMakeLists.txt  README.md
include/: basic_tensor.h  neural_network.h
src/: basic_tensor.cpp  main.cpp  neural_network.cpp
